--- a/stylesheets/estilo.css
+++ b/stylesheets/estilo.css
@@ -40,7 +40,7 @@ body {
 	height: 100%;
 	min-height: 100%;
     margin: 0 auto;
-    background: url(img/fondo.jpg)no-repeat fixed center;
+    background: url(images/fondo.jpg)no-repeat fixed center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
