--- a/stylesheets/estilo.css
+++ b/stylesheets/estilo.css
@@ -261,20 +261,10 @@ aside li span {
 
 @media (max-width: 500px) {
 	.pb{
-		position:fixed;
-		top:0px;
-		right:0px;
-		width:100%;
-		height:100%;
-		opacity:0.1;
+		display:none;
 	}
 	.logopbm{
-		position:fixed;
-		top:0px;
-		right:0px;
-		width:100%;
-		height:100%;
-		opacity:0.1;	
+		display:none;	
 	}
 	nav header .menu-button{
 		display: none;
@@ -347,11 +337,10 @@ aside li span {
 		margin-right:30px;
 	}
     .txt2{
-    	float:left;
-    	width:40%;
+
     }
     .txt2 ol{
-		margin-left:10%;
+		margin-left:10px;
     	text-align:left;
     }
 	.txt2 ol li ul{
@@ -368,7 +357,6 @@ aside li span {
     	padding-bottom:40px;
     }
     .txt5{
-    	clear:both;
     	padding-top:40px;
     	padding-bottom:40px;
     	border-top:1px solid #A4A4A4;
@@ -492,9 +480,7 @@ aside li span {
 		display:none;
 	}
 	.cvitae{
-		text-align:center;
-		width:7em;
-		height:8em;
+		display:none;
 	}
 	.fondomenu ul.navegacion li a{
 		
