--- a/stylesheets/estilo.css
+++ b/stylesheets/estilo.css
@@ -723,12 +723,12 @@ html{
 		margin:10px;
 		width:280px;
 		height:350px;
-		-webkit-transform:scale(1.1); /*Webkit:Modificamos tamaÃ±o a escala*/
-		-moz-transform:scale(1.1); /*Mozilla:Modificamos tamaÃ±o a escala*/
-		-o-transform:scale(1.1); /*Opera:Modificamos tamaÃ±o a escala*/
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transform:scale(1.1); /*Webkit:Modificamos tamaño a escala*/
+		-moz-transform:scale(1.1); /*Mozilla:Modificamos tamaño a escala*/
+		-o-transform:scale(1.1); /*Opera:Modificamos tamaño a escala*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		opacity: 1;
 	}
 	img.cartel{
@@ -750,12 +750,12 @@ html{
 		margin:10px;
 		width:280px;
 		height:250px;
-		-webkit-transform:scale(1.1); /*Webkit:Modificamos tamaÃ±o a escala*/
-		-moz-transform:scale(1.1); /*Mozilla:Modificamos tamaÃ±o a escala*/
-		-o-transform:scale(1.1); /*Opera:Modificamos tamaÃ±o a escala*/
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transform:scale(1.1); /*Webkit:Modificamos tamaño a escala*/
+		-moz-transform:scale(1.1); /*Mozilla:Modificamos tamaño a escala*/
+		-o-transform:scale(1.1); /*Opera:Modificamos tamaño a escala*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		opacity: 1;
 	}
 	img.cabecera{
@@ -774,12 +774,12 @@ html{
 	img.cabecera:hover{
 		z-index:1;
 		margin:10px;
-		-webkit-transform:scale(1.1); /*Webkit:Modificamos tamaÃ±o a escala*/
-		-moz-transform:scale(1.1); /*Mozilla:Modificamos tamaÃ±o a escala*/
-		-o-transform:scale(1.1); /*Opera:Modificamos tamaÃ±o a escala*/
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transform:scale(1.1); /*Webkit:Modificamos tamaño a escala*/
+		-moz-transform:scale(1.1); /*Mozilla:Modificamos tamaño a escala*/
+		-o-transform:scale(1.1); /*Opera:Modificamos tamaño a escala*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		opacity: 1;
 	}
 	 div.izq{
@@ -815,9 +815,9 @@ html{
 		border-radius: 10px;
 		float:left;
 		margin-top:0px;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #nieve{
@@ -826,9 +826,9 @@ html{
 		-moz-border-radius: 10px;
 		border-radius: 10px;
 		float:right;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #futbol{
@@ -841,9 +841,9 @@ html{
 		border-radius: 10px;
 		float:right;
 		margin-top:0px;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #jugando{
@@ -852,9 +852,9 @@ html{
 		-moz-border-radius: 10px;
 		border-radius: 10px;
 		float:left;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #golf{
@@ -867,9 +867,9 @@ html{
 		border-radius: 10px;
 		float:left;
 		margin-top:0px;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #golfista{
@@ -878,9 +878,9 @@ html{
 		-moz-border-radius: 10px;
 		border-radius: 10px;
 		float:right;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #pintar{
@@ -893,9 +893,9 @@ html{
 		border-radius: 10px;
 		float:right;
 		margin-top:0px;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #pintando{
@@ -904,9 +904,9 @@ html{
 		-moz-border-radius: 10px;
 		border-radius: 10px;
 		float:left;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #padel{
@@ -919,9 +919,9 @@ html{
 		border-radius: 10px;
 		float:left;
 		margin-top:0px;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #imgpadel{
@@ -930,9 +930,9 @@ html{
 		-moz-border-radius: 10px;
 		border-radius: 10px;
 		float:right;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #surf{
@@ -945,9 +945,9 @@ html{
 		border-radius: 10px;
 		float:right;
 		margin-top:0px;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #imgsurf{
@@ -956,9 +956,9 @@ html{
 		-moz-border-radius: 10px;
 		border-radius: 10px;
 		float:left;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 
@@ -972,9 +972,9 @@ html{
 		border-radius: 10px;
 		float:left;
 		margin-top:0px;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 	 #imgrutas{
@@ -983,18 +983,20 @@ html{
 		-moz-border-radius: 10px;
 		border-radius: 10px;
 		float:right;
-		-webkit-transition-duration: 0.5s; /*Webkit:DuraciÃ³n de la animaciÃ³n*/
-		-moz-transition-duration: 0.5s; /*Mozilla:DuraciÃ³n de la animaciÃ³*/
-		-o-transition-duration: 0.5s; /*Opera:DuraciÃ³n de la animaciÃ³*/
+		-webkit-transition-duration: 0.5s; /*Webkit:Duración de la animación*/
+		-moz-transition-duration: 0.5s; /*Mozilla:Duración de la animació*/
+		-o-transition-duration: 0.5s; /*Opera:Duración de la animació*/
 		margin-bottom:20px;
 	 }
 }
 /*CSS para movil*/
 @media (max-width: 500px) {
 	body {  
-		max-width: 100%;
+		width: 100%;
 		height: 100%;
-		margin: 0 auto;
+		margin:0;
+		padding:0;
+		position:relative;
 		background: url(../images/fondomovil.jpg)no-repeat center;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
@@ -1027,7 +1029,6 @@ html{
 		margin-top:19px;
 	}
 	#movernombre{
-		
 		color:#2c3b55;
 	}
 	#logo{
@@ -1385,6 +1386,7 @@ html{
 		width:1000px;
 		height:300px;
 		margin-left:-240px;
+		display:none;
 	}
 	img.album{
 		width:220px;
@@ -1412,13 +1414,13 @@ html{
 	 }	
 	 /*SOBRE MI*/
 	#sobremi{
-		clear:both;
 		max-width:100%;
     	text-align:center;
     	color:black;
     	font-weight: normal;
 		background-color:white;
 		font-weight: bold;
+		margin-top:-50px;
 	}
 	#esqui{
 		background-color:#82FA58;
